# aihack

./: .example.env  .gitignore  .pre-commit-config.yaml  BUILD_PLAN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  POETRY_SETUP.md  README.md  pyproject.toml  pyrightconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
examples/: insecure_code.py  simple_logic.py
scripts/: setup.sh
src/aihack/: __init__.py  config.py
src/aihack/cli/: main.py  session.css  session.py
src/aihack/cli/runners/: __init__.py  session.py
src/aihack/core/: click.py  context.py  rich.py  session_service.py  session_service_old.py  tasks.py
src/aihack/core/context/: context_analytics.py  context_engine.py  context_measurement.py  live_context_manager.py
src/aihack/core/utils/: __init__.py  chat_processor.py  command_utils.py  file_utils.py  model_manager.py  session_state.py  shell_utils.py  system_handler.py  task_processor.py
src/aihack/core/utils/fs/: file_completion.py  file_index.py  smart_completion.py
src/aihack/models/: base.py  claude.py  gemini.py  local.py
src/aihack/prompts/: __init__.py  prompt_loader.py  templates.py
src/aihack/prompts/analyze/: local_structured.py
src/aihack/prompts/review/: local_strict.py  local_ultra_tight.py
src/aihack/prompts/security/: local_tight.py
src/aihack/scripts/: ah_wrapper.py
src/aihack/tests/models/: testgemini.py
src/aihack/tests/scripts/: example_code.py
src/aihack/types/: __init__.py  common.py  models.py  prompts.py
tests/models/: testclaude.py  testgemini.py  testlocal.py
tests/scripts/: security_test.py  test_example.py
